# MoCoPr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
benches/: performance_benchmarks.rs  protocol_benchmarks.rs  transport_benchmarks.rs
docs/: API_STABILITY.md  performance.md  security.md
docs/guides/: architecture.md  cookbook.md  production-readiness-checklist.md  production-readiness.md  troubleshooting.md  user-guide.md
docs/tutorials/: 01-quick-start.md  02-building-your-first-server.md  03-advanced-features.md  04-production-deployment.md  05-performance-tuning.md
examples/calculator-server/: Cargo.toml
examples/calculator-server/src/: main.rs
examples/file-server/: Cargo.toml
examples/file-server/src/: main.rs
examples/http-client-tool/: Cargo.toml
examples/http-client-tool/src/: main.rs
examples/performance-analysis/: Cargo.toml
examples/performance-analysis/src/: main.rs
examples/production-ready/: Cargo.toml
examples/production-ready/src/: main.rs  production_server.rs
examples/rbac-example/: Cargo.toml
examples/rbac-example/src/: main.rs
examples/rbac-simple/: Cargo.toml
examples/rbac-simple/src/: main.rs
examples/simple-client/: Cargo.toml
examples/simple-client/src/: main.rs
examples/simple-server/: Cargo.toml
examples/simple-server/src/: main.rs
examples/websocket-server/: Cargo.toml  README.md
examples/websocket-server/src/: main.rs
mocopr-client/: Cargo.toml
mocopr-client/src/: lib.rs
mocopr-core/: Cargo.toml
mocopr-core/src/: error.rs  lib.rs  monitoring.rs  security.rs  utils.rs
mocopr-core/src/protocol/: handler.rs  mod.rs  router.rs  session.rs
mocopr-core/src/transport/: http.rs  mod.rs  stdio.rs  websocket.rs
mocopr-core/src/types/: capabilities.rs  error  error.rs  messages.rs  mod.rs  prompts  prompts.rs  resources  resources.rs  roots.rs  sampling.rs  tools  tools.rs
mocopr-core/src/utils/: json.rs
mocopr-core/tests/: resource_tests.rs
mocopr-macros/: Cargo.toml
mocopr-macros/src/: lib.rs  prompt.rs  resource.rs  tool.rs
mocopr-rbac/: Cargo.toml  README.md
mocopr-rbac/src/: config.rs  context.rs  error.rs  lib.rs  middleware.rs  permissions.rs  subjects.rs
mocopr-server/: Cargo.toml
mocopr-server/src/: builder.rs  handlers.rs  lib.rs  middleware.rs  registry.rs  server.rs
src/: lib.rs
tests/: comprehensive_integration_tests.rs  edge_case_tests.rs  end_to_end_tests.rs  http_transport_tests.rs  production_integration_tests.rs  rbac_permission_boundary_tests.rs  rbac_security_tests.rs  simple_test.rs  stdio_transport_tests.rs  stress_tests.rs  tool_tests.rs  websocket_transport_tests.rs
