[package]
name = "mocopr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and protocol implementation for MoCoPr (Model Context Protocol)"
keywords.workspace = true
categories.workspace = true

[features]
default = ["serde-json-standard"]
simd-json-performance = ["simd-json"]
serde-json-standard = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
smallvec = { version = "1.15.1", features = ["serde"] }
simd-json = { version = "0.13.10", features = ["serde_impl"], optional = true }
bytes = "1.6.0"

[dev-dependencies]
tokio-test.workspace = true
tokio.workspace = true
tempfile = "3.12.0"
