[package]
name = "mocopr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Server implementation for MoCoPr (Model Context Protocol)"
keywords.workspace = true
categories.workspace = true

[dependencies]
mocopr-core = { path = "../mocopr-core" }
mocopr-macros = { path = "../mocopr-macros" }

# Core dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP/WebSocket transport
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
tokio-test.workspace = true
