[package]
name = "http-client-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
mocopr-server = { path = "../../mocopr-server" }
mocopr-core = { path = "../../mocopr-core" }
mocopr-macros = { path = "../../mocopr-macros" }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
url = "2.0"
