[package]
name = "performance-analysis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "performance-analysis"
path = "src/main.rs"

[dependencies]
mocopr-core = { path = "../../mocopr-core" }
mocopr-server = { path = "../../mocopr-server" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
num_cpus = "1.16"
