[package]
name = "rbac-example"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
mocopr-core = { path = "../../mocopr-core" }
mocopr-server = { path = "../../mocopr-server" }
mocopr-rbac = { path = "../../mocopr-rbac" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
async-trait = { workspace = true }
