[package]
name = "rbac-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
mocopr-core = { path = "../../mocopr-core" }
mocopr-server = { path = "../../mocopr-server" }
mocopr-rbac = { path = "../../mocopr-rbac" }
role-system = { version = "0.1.0", features = ["async", "persistence", "audit"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde_json = "1.0"
