[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
mocopr-core = { path = "../../mocopr-core" }
mocopr-macros = { path = "../../mocopr-macros" }
mocopr-server = { path = "../../mocopr-server" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.0"
